<resources>
    <string name="app_name">FruitMusic</string>
    <string name="info_user">用户名</string>
    <string name="info_pwd">密码</string>
    <string name="info_pwd2">再次输入密码</string>
    <string name="info_login">登录</string>
    <string name="info_registered">注册</string>
    <string name="info_to_res">没有账号？<u>点击注册</u></string>
    <string name="info_login_out">退出登录</string>
    <string name="search_hint">搜索</string>
    <string name="default_user_name">这是一行测试文字</string>
    <string name="default_content_menu_title">菜单</string>
    <string name="item_music">音乐馆</string>
    <string name="item_explore">探索</string>
    <string name="item_local">我的</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="current_time">00:00</string>
    <string name="info_phone_number">请输入手机号/11位</string>
    <string name="info_email">请输入电子邮箱</string>
    <string name="info_verification_code">验证码</string>
    <string name="info_get_code">获取验证码</string>
    <string name="info_number_not_enough">手机号码不足11位</string>
    <string name="info_input_password">请输入密码</string>
    <string name="info_waiting">请稍后…</string>
    <string name="email_address">\@163.com</string>
    <string name="daily_recommend">每日推荐</string>
    <string name="label_ranking">排行榜</string>
    <string name="label_playlist">歌单</string>
    <string name="label_new_album">新碟上架</string>
    <string name="advice_title_recommend_playlist">推荐歌单</string>
    <string name="advice_button">查看更多</string>
    <string name="advice_button_play">播放全部</string>
    <string name="advice_title_newest_album">最新专辑</string>
    <string name="advice_title_new_song">推荐新音乐</string>
    <string name="info_title_square">歌单广场</string>
    <string name="info_ranking">排行榜</string>
    <string name="info_ranking_official_title">官方排行</string>
    <string name="info_ranking_other_title">其他排行</string>
    <string name="info_loading">正在加载…</string>
    <string name="info_error">网络错误，点击重试</string>
    <string name="info_complete">数据加载完成</string>
    <string name="info_search_history">历史记录</string>
    <string name="info_search_hot">热搜榜</string>
    <string name="info_search">请输入搜索关键字</string>
    <string name="default_number">10000</string>
    <string name="info_similar_mv">相关视频</string>
    <string name="info_current_list">当前播放列表</string>
    <string name="info_local_music">本地音乐</string>
    <string name="info_edit">编辑</string>
    <string name="info_change_background">更换背景</string>
    <string name="title_activity_bridge">BridgeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="info_cancel">取消</string>
    <string name="info_confirm">确定</string>
    <string name="info_setting">设置</string>


    <string name="change_head_by_album">更换头像</string>
    <string name="sava_head">保存头像</string>
    <string name="change_head_by_camera">从相机拍照</string>
    <string name="info_no_lyric">没有歌词哦~</string>
    <string name="info_title_play_his">播放历史</string>
    <string name="info_no_play_his">暂时还没有哦~</string>
    <string name="info_nickname">昵称：</string>
    <string name="info_gender">性别：</string>
    <string name="info_signature">个性签名：</string>
    <string name="info_input">请输入</string>
</resources>