<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="10dp"
    android:background="@drawable/dialog_confirm_bg">

    <TextView
        android:id="@+id/tv_confirm_content"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:padding="10dp"
        android:text="@string/default_user_name"
        android:textColor="@color/blackGrayTextColor"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/divider5"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/light_grey"
        app:layout_constraintTop_toBottomOf="@id/tv_confirm_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:id="@+id/tv_behavior_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_cancel"
        android:textColor="@color/red"
        app:layout_constraintTop_toBottomOf="@id/divider5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/vertical_line"
        android:gravity="center"
        android:padding="10dp"
        android:foreground="?attr/selectableItemBackground"/>

    <TextView
        android:id="@+id/tv_behavior_confirm"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/info_confirm"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        android:textColor="@color/grey"
        app:layout_constraintStart_toEndOf="@id/vertical_line"
        android:gravity="center"
        android:padding="10dp"
        android:foreground="?attr/selectableItemBackground"/>

    <View
        android:id="@+id/vertical_line"
        android:layout_width="1dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/divider5"
        app:layout_constraintBottom_toBottomOf="@id/tv_behavior_cancel"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@color/light_grey"/>

</androidx.constraintlayout.widget.ConstraintLayout>