<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".view.userinfo.ChangeUserFragment"
    android:background="@color/white">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/change_user_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:title="我的资料"
        app:titleTextColor="@color/white"
        app:navigationIcon="@drawable/back"
        app:contentInsetStartWithNavigation="0dp"
        android:fitsSystemWindows="true"/>

    <LinearLayout
        android:id="@+id/line_nickname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:id="@+id/textView3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_nickname"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/user_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_user_name"
            android:singleLine="true"
            android:maxWidth="200dp"
            android:layout_weight="1"
            android:gravity="end"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_grey"/>

    <LinearLayout
        android:id="@+id/line_gender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_gender"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/user_gender"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_user_name"
            android:singleLine="true"
            android:layout_weight="1"
            android:gravity="end"
            android:maxWidth="200dp"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_grey"/>

    <LinearLayout
        android:id="@+id/line_signature"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="20dp"
        android:foreground="?attr/selectableItemBackground">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_signature"
            android:textColor="@color/black" />

        <TextView
            android:id="@+id/user_signature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/default_user_name"
            android:singleLine="true"
            android:maxWidth="200dp"
            android:layout_weight="1"
            android:gravity="end"/>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/light_grey"/>


</LinearLayout>