<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_horizontal|bottom"
    android:padding="20dp"
    tools:showIn="@layout/user_info_fragment"
    android:id="@+id/user_info_label_root">

    <ImageView
        android:id="@+id/iv_user_head"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cherry_logo"
        tools:ignore="ContentDescription" />

    <TextView
        android:id="@+id/tv_user_info_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/default_user_name"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_user_head" />

    <TextView
        android:id="@+id/tv_user_focus_fans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/default_user_name"
        android:textColor="@color/light_grey"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_info_name" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@id/tv_user_focus_fans"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical|end">

        <TextView
            android:id="@+id/btn_user_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/info_edit"
            android:background="@drawable/user_info_btn_selector"
            android:textColor="@color/white"
            android:padding="5dp" />

        <TextView
            android:id="@+id/btn_user_change_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/user_info_btn_selector"
            android:text="@string/info_change_background"
            android:layout_marginStart="10dp"
            android:textColor="@color/white"
            android:padding="5dp" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>